manifests/monitoring/gatus.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: gatus
  template:
    metadata:
      labels:
        app: gatus
    spec:
      containers:
        - name: gatus
          image: twinproduction/gatus
          resources:
            limits:
              memory: "128Mi"
              cpu: "256m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: gatus-pvc
              mountPath: /data
            - name: gatus-config
              mountPath: /config
      volumes:
        - name: gatus-pvc
          persistentVolumeClaim:
            claimName: gatus-pvc
        - name: gatus-config
          configMap:
            name: gatus-config
---
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: monitoring
spec:
  selector:
    app: gatus
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.xetera.dev`)
      priority: 10
      services:
        - name: gatus
          port: 8080
      middlewares:
        - name: ingress-cloudflare-only@kubernetescrd
  tls:
    options:
      name: ingress-cloudflare-mtls@kubernetescrd
    secretName: xetera-dev-cloudflare
