manifests/monitoring/tempo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3200"
      labels:
        app: tempo
    spec:
      containers:
        - name: tempo
          image: grafana/tempo:latest
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            runAsNonRoot: true
          ports:
            - containerPort: 3200
            # no grpc as of yet
            - containerPort: 4318
          args:
            - -config.file=/etc/tempo.yaml
          volumeMounts:
            - name: tempo-config
              mountPath: /etc/tempo.yaml
              subPath: tempo.yaml
            - name: tempo-pvc
              mountPath: /var/tempo
      volumes:
        - name: tempo-config
          configMap:
            name: tempo-config
        - name: tempo-pvc
          persistentVolumeClaim:
            claimName: tempo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: tempo
  namespace: monitoring
spec:
  selector:
    app: tempo
  ports:
    - name: otlp-http
      protocol: TCP
      port: 4318
      targetPort: 4318
    - name: http
      protocol: TCP
      port: 3200
      targetPort: 3200
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tempo-ingress-policy
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app: tempo
  ingress:
    # OTLP/HTTP traces from projects
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: default
      toPorts:
        - ports:
            - port: "4318"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: default
      toPorts:
        - ports:
            - port: "4318"
              protocol: TCP
    # OTLP/HTTP traces from ingress
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ingress
            app: traefik
      toPorts:
        - ports:
            - port: "4318"
              protocol: TCP
    # API access from grafana/metrics
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "3200"
              protocol: TCP
            - port: "4318"
              protocol: TCP
            - port: "80"
              protocol: TCP
    # healthchecks/metrics
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "3200"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
